# asts_dapp

ast_contracts/: .gitignore  package-lock.json  package.json  truffle-config.js
ast_contracts/contracts/: AsToken.sol  ScToken.sol  SpToken.sol  StdEvents.sol  StdTokenSys.sol
ast_contracts/migrations/: 1_student.js
ast_rs/: Cargo.toml  build.rs  build.sh
ast_rs/contracts/: ASTEvent.json  Student.json
ast_rs/src/: main.rs  std_events.rs
asts_front/: build.sh  package-lock.json  package.json  store.js
asts_front/Slices/: eventSlice.js  loginSlice.js  studentSlice.js
asts_front/pages/: _document.js  index.js
asts_front/pages/students/: event.js  index.js  signup.js
asts_front/std_api/assets/: ASTEvent.json  Student.json
asts_front/std_api/docs/: index.html  modules.html
asts_front/std_api/docs/assets/: highlight.css  search.js
asts_front/std_api/docs/enums/: types.Department.html  types.StdEventState.html  types.StokenKind.html
asts_front/std_api/docs/functions/: events.approveEvent.html  events.dispConductedEvents.html  events.dispParticipatedEvents.html  events.endEvent.html  events.getApprovedEvents.html  events.getCurEventState.html  events.getUnApprovedEvents.html  events.isAdmin.html  events.setEventState.html  events.stdLogin.html  (+3 more)
asts_front/std_api/src/: astkn.ts  events.ts  student.ts  types.ts
data_cache/: Cargo.toml  DockerFile  api.env  docker-compose.yml  mongo.env
data_cache/nginx/: nginx.conf
data_cache/src/: main.rs
data_cache/src/handlers/: event_handler.rs
data_cache/src/models/: event_mdl.rs  mod.rs
(+12 files in other folders)
