[package]
name = "ast_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.2", features = ["legacy"] }
tokio = { version = "1.23.0", features = ["full"] }

[build-dependencies]
ethers = { version = "1.0.2", features = ["legacy"] }
