[package]
name = "ast_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.149", features = ["derive"] }
actix-web = "4.2.1"
mongodb = { version = "2.3.1", features = [
  "bson-chrono-0_4",
  "bson-serde_with",
] }
serde_json = "1.0.82"
env_logger = "0.10.0"
chrono = { version = "0.4.23", features = ["serde"] }
futures="0.3.25"
